[package]
name = "lzzzz_async_read_decompressor"
version = "0.1.0"
authors = ["jean-airoldie <25088801+jean-airoldie@users.noreply.github.com>"]
edition = "2018"

[dependencies]
lzzzz = { git = "https://github.com/jean-airoldie/lzzzz", features = ["async-io"], branch = "async_std" }
smol = "0.3.3"
futures-lite = "0.1.10"
piper = "0.1.3"
lazy_static = "1.4.0"
bytes = "0.5.6"
rand = { version = "0.7.3", features = ["small_rng"] }
